# htmldispatch

./: .gitignore  README.md  TODO.md  htmldispatch.desktop  install.sh  pyproject.toml  run.py
htmldispatch/: browsers.py  config.py  dispatcher.py  gui.py  history.py  main.py
